Fix taxonomy width issues on small screens

--- a/sass/code.scss
+++ b/sass/code.scss
@@ -49,7 +49,7 @@ ul.meta {
   list-style-type: none;
   padding-left: 0;
 
-  time, .words, .taxonomy, .repo {
+  time, .words, .taxonomy a, .repo {
     white-space: nowrap;
   }
 
